# GoaLoop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
agents/: goal-runner.md
docs/: comparison-claude-goal.md  comparison-codex.md  comparison-pi-goal.md  design.md  image-prompts.md
docs/assets/: README.md
goaloop/: __init__.py  adapter.py  cli.py  config.py  orchestrator.py
goaloop/resources/: README.md
skills/goal-flash/: SKILL.md
skills/goal-init/: SKILL.md
skills/goal-run/: SKILL.md
