[project]
name = "goaloop"
version = "0.1.0"
description = "Goal-driven multi-attempt iteration loop driven by `claude -p`"
requires-python = ">=3.10"
dependencies = []  # stdlib only

[project.scripts]
goaloop = "goaloop.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["goaloop"]
